--- a/Root/IE104.CK/courses/index.html
+++ b/Root/IE104.CK/courses/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Các khoá học</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <link rel="stylesheet" href="style/style.css">
@@ -48,7 +48,7 @@
             </ul>
           </div>
         </div>
-        <div class="box2"> <img src="../images/html2.jfif">
+        <div class="box2"> <img src="../images/html2.jpg">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
             <p> Nguyễn Huy Khoa</p>
@@ -64,7 +64,7 @@
             </ul>
           </div>
         </div>
-        <div class="box3"> <img src="../images/html3.jfif">
+        <div class="box3"> <img src="../images/html3.jpg">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
             <p> Vũ Ngọc Triệu</p>
@@ -80,7 +80,7 @@
             </ul>
           </div>
         </div>
-        <div class="box4"> <img src="../images/html4.jfif">
+        <div class="box4"> <img src="../images/html4.jpg">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
@@ -101,7 +101,7 @@
     <div class="courses-group">
       <div  id="css">
         <p> Các lớp học CSS</p>
-        <div class="box"> <img src="../images/css.jfif">
+        <div class="box"> <img src="../images/css.jpg">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
@@ -117,7 +117,7 @@
             </ul>
           </div>
         </div>
-        <div class="box2"> <img src="../images/css2.jfif">
+        <div class="box2"> <img src="../images/css2.png">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
             <p> Đào Zăn Bi</p>
@@ -133,7 +133,7 @@
             </ul>
           </div>
         </div>
-        <div class="box3"> <img src="../images/css3.jfif">
+        <div class="box3"> <img src="../images/css3.jpg">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
             <p> Đỗ Thị Ánh</p>
@@ -149,7 +149,7 @@
             </ul>
           </div>
         </div>
-        <div class="box4"> <img src="../images/css4.jfif">
+        <div class="box4"> <img src="../images/css4.jpg">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
             <p> Phạm Nhật Vinh</p>
@@ -170,7 +170,7 @@
     <div class="courses-group">
       <div id="js">
         <p> Các lớp học JS</p>
-        <div class="box"> <img src="../images/js.jfif">
+        <div class="box"> <img src="../images/js.jpg">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
@@ -202,7 +202,7 @@
             </ul>
           </div>
         </div>
-        <div class="box3"> <img src="../images/js3.jfif">
+        <div class="box3"> <img src="../images/js3.jpg">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
             <p> Nguyễn Thị Bí</p>
@@ -218,7 +218,7 @@
             </ul>
           </div>
         </div>
-        <div class="box4"> <img src="../images/js4.jfif">
+        <div class="box4"> <img src="../images/js4.jpg">
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
             <p> Phạm Văn Bầu</p>
@@ -271,7 +271,7 @@
             </ul>
           </div>
         </div>
-        <div class="box3"> <img src="../images/jquery3.jfif">
+        <div class="box3"> <img src="../images/jquery3.jpg">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
             <p> Nguyễn Văn Ổi</p>
@@ -287,7 +287,7 @@
             </ul>
           </div>
         </div>
-        <div class="box4"> <img src="../images/jquery4.jfif">
+        <div class="box4"> <img src="../images/jquery4.jpg">
           <div class="info">
             <h3>Khóa học jQuery dành cho người mới</h3>
             <p> Huỳnh Thị Mít</p>
@@ -324,7 +324,7 @@
             </ul>
           </div>
         </div>
-        <div class="box2"> <img src="../images/php2.jfif">
+        <div class="box2"> <img src="../images/php2.jpg">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
@@ -340,7 +340,7 @@
             </div>
           </div>
         </div>
-        <div class="box3"> <img src="../images/php3.jfif">
+        <div class="box3"> <img src="../images/php3.jpg">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
             <p> Nguyễn Huy Khoa</p>
@@ -356,7 +356,7 @@
             </div>
           </div>
         </div>
-        <div class="box4"> <img src="../images/php4.jfif">
+        <div class="box4"> <img src="../images/php4.jpg">
           <div class="info">
             <h3>Khóa học PHP dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
