--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html><!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+<html>
+<!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -25,7 +26,6 @@
     </ul>
   </nav>
 </header>
-	
 <!-- InstanceBeginEditable name="EditRegion3" -->
 <div id="mainpage">
   <div id="detail">
@@ -35,11 +35,11 @@
         <p>Chúng tôi giúp bạn học lập trình web online thay vì học mò mẫm không có hiệu quả. Bạn được hỗ trợ 24/24 từ người hướng dẫn, học bất kỳ lúc nào, học bất kỳ đâu. Hiện đã có rất nhiều người theo học và có kết quả tốt. Vì vậy bây giờ hãy để chúng tôi giúp bạn!</p>
       </div>
     </div>
-    <div id="image"><img src="images/pexels-pixabay-270404.jpg"></div>
+    <div id="image"><img src="images/bg.gif"></div>
   </div>
   <div id="reason">
     <div>
-      <h2>Tại sao bạn nên học tại ...</h2>
+      <h2>Tại sao bạn nên học tại KT Learn?</h2>
       <table cellspacing="20" cellpadding="0">
         <tr>
           <td><i class="fas fa-check-circle"></i>Học lộ trình từng bước cơ bản đến chuyên sâu</td>
@@ -65,51 +65,45 @@
       <h2> Bạn đã cảm thấy hứng thứ với khóa học của chúng tôi?</h2>
       <p> Nếu có hãy đến với các khóa học của chúng tôi.</p>
       <p>Một số khóa học tiêu biểu:</p>
-           <div class="courses-group">
-            <div class="box">
-               <img src="images/html.png">
-               <div class="info">
-               <h3>Khóa học HTML dành cho người mới</h3>
-               <p> Phạm Thùy Dung</p>
-               <p> 2509 người đang học</p>
-               <div class="cost"> 250,989đ</div>
-             </div>
-            <div class=" detail">
-               <h3>Bạn có thể học được</h3>
-                   <ul>
-                       <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-                       <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-                       <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-                   </ul>  
-               </div>
-             </div>
-                <div class="box2">
-               <img src="images/css2.jfif">
-                <div class="info">
-               <h3>Khóa học CSS dành cho người mới</h3>
-               <p> Nguyễn Huy Khoa</p>
-               <p> 3442 người đang học</p>
-              <div class="cost"> 234,552đ</div>
-               </div>
-               <div class="detail">
-                    <h3>Những gì bạn sẽ học</h3>
-                    <ul>
-                       <li>Xây dựng các trang web đẹp không chỉ chứa nội dung tuyệt vời mà còn phải trông đẹp mắt</li>
-                       <li>Sử dụng các tính năng CSS cơ bản cũng như nâng cao</li>
-                       <li>Hiểu các khái niệm và lý thuyết đằng sau CSS và các tính năng CSS nhất định</li>
-                    </ul>
-               </div>
-             </div>
-            </div>
+      <div class="courses-group">
+        <div id="html1" class="box"> <img src="images/html.png">
+          <div class="info">
+            <h3>Khóa học HTML dành cho người mới</h3>
+            <p> Phạm Thùy Dung</p>
+            <p> 2509 người đang học</p>
+            <div class="cost"> 250,989đ</div>
           </div>
-          <div style=" text-align:right;border:1px solid #000;width: 200px; float:right;background-color:#FFF; border-radius:20px;">
-            <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a>
-         </div>
+          <div class=" detail">
+            <h3>Bạn có thể học được</h3>
+            <ul>
+              <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+              <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+              <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="box2"> <img src="images/css2.jfif">
+          <div class="info">
+            <h3>Khóa học CSS dành cho người mới</h3>
+            <p> Nguyễn Huy Khoa</p>
+            <p> 3442 người đang học</p>
+            <div class="cost"> 234,552đ</div>
+          </div>
+          <div class="detail">
+            <h3>Những gì bạn sẽ học</h3>
+            <ul>
+              <li>Xây dựng các trang web đẹp không chỉ chứa nội dung tuyệt vời mà còn phải trông đẹp mắt</li>
+              <li>Sử dụng các tính năng CSS cơ bản cũng như nâng cao</li>
+              <li>Hiểu các khái niệm và lý thuyết đằng sau CSS và các tính năng CSS nhất định</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+    <div style=" text-align:right;border:1px solid #000;width: 200px; float:right;background-color:#FFF; border-radius:20px;"> <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a> </div>
   </div>
 </div>
 <!-- InstanceEndEditable -->
-	
 <footer class="footer">
   <div class="footer1"> <img src="images/logo.png">
     <div class="content1">
@@ -160,6 +154,7 @@
 </footer>
 </body>
 <!-- InstanceBeginEditable name="script" -->
-	script
+<script src="js/script.js"></script>
 <!-- InstanceEndEditable -->
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
