fix image in html

--- a/Root/IE104.CK/courses-type/course-type.html
+++ b/Root/IE104.CK/courses-type/course-type.html
@@ -46,7 +46,7 @@
       </ul>
     </div>
   </div>
-	<div class="box"> <img src="../images/html2.jfif">
+	<div class="box"> <img src="../images/html2.jpg">
     <div class="info">
       <h3>HTML cấp tốc</h3>
       <p> Nguyễn Huy Khoa</p>
