--- a/Root/IE104.CK/courses/index.html
+++ b/Root/IE104.CK/courses/index.html
@@ -100,13 +100,8 @@
     </div>
     <div class="courses-group">
       <div  id="css">
-<<<<<<< HEAD
         <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học CSS</h2>
-        <div class="box"> <img src="../images/css.jfif">
-=======
-        <p> Các lớp học CSS</p>
         <div class="box"> <img src="../images/css.jpg">
->>>>>>> 379f6e07adc887ced40dd83a1e0287ba119755ff
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
@@ -172,15 +167,11 @@
         </div>
       </div>
     </div>
+ </div>
     <div class="courses-group">
       <div id="js">
-<<<<<<< HEAD
         <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học JS</h2>
-        <div class="box"> <img src="../images/js.jfif">
-=======
-        <p> Các lớp học JS</p>
         <div class="box"> <img src="../images/js.jpg">
->>>>>>> 379f6e07adc887ced40dd83a1e0287ba119755ff
           <div class="info">
             <h3>Khóa học Javascrpit dành cho người mới</h3>
             <p> Vũ Văn Sầu Riêng</p>
@@ -245,6 +236,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     <div class="courses-group">
       <div id="jquery">
@@ -314,6 +306,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
     <div class="courses-group">
       <div id="PHP">
