--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -82,7 +82,7 @@
             </ul>
           </div>
         </div>
-        <div class="box2"> <img src="images/css2.jfif">
+        <div class="box2"> <img src="images/css2.png">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
             <p> Nguyễn Huy Khoa</p>
@@ -100,7 +100,7 @@
         </div>
       </div>
     </div>
-    <div style=" text-align:right;border:1px solid #000;width: 200px; float:right;background-color:#FFF; border-radius:20px;"> <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a> </div>
+    <div style=" margin: 20px;;text-align:right;border:1px solid #000;width: 200px; float:left ;background-color:#36C; border-radius:20px; padding: 10px; display:inline-block"> <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a> </div>
   </div>
 </div>
 <!-- InstanceEndEditable -->
