Fix Course, add Nav to course type

--- a/Root/IE104.CK/courses/index.html
+++ b/Root/IE104.CK/courses/index.html
@@ -19,7 +19,6 @@
     <ul id="main-menu">
       <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="index.html">Khóa học</a></li>
-      <li><a class="main_nav" href="">Thông báo</a></li>
       <li><a class="main_nav" id="log-in" style="color:black" text href="../log-in/index.html">Đăng nhập</a></li>
       <li><a class="main_nav" id="sign-up" href="../sign-up/index.html">Đăng ký</a></li>
     </ul>
@@ -31,7 +30,7 @@
   <div id="header">
     <div class="courses-group">
       <div id="html">
-        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học HTML</h2>
+        <h2 style="color:#ff2f39a6; font-size:xx-large;"> Các lớp học HTML</h2>
         <div id="html1" class="box"> <img src="../images/html.png">
           <div class="info">
             <h3>Khóa học HTML dành cho người mới</h3>
@@ -100,7 +99,7 @@
     </div>
     <div class="courses-group">
       <div  id="css">
-        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học CSS</h2>
+        <h2 style="color:#ff2f39a6; font-size:xx-large;"> Các lớp học CSS</h2>
         <div class="box"> <img src="../images/css.jpg">
           <div class="info">
             <h3>Khóa học CSS dành cho người mới</h3>
@@ -167,213 +166,210 @@
         </div>
       </div>
     </div>
- </div>
-    <div class="courses-group">
-      <div id="js">
-        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học JS</h2>
-        <div class="box"> <img src="../images/js.jpg">
-          <div class="info">
-            <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Vũ Văn Sầu Riêng</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
-              <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
-              <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
-            </ul>
-          </div>
+  </div>
+  <div class="courses-group">
+    <div id="js">
+      <h2 style=" color:#ff2f39a6; font-size:xx-large;"> Các lớp học JS</h2>
+      <div class="box"> <img src="../images/js.jpg">
+        <div class="info">
+          <h3>Khóa học Javascrpit dành cho người mới</h3>
+          <p> Vũ Văn Sầu Riêng</p>
+          <p> 844 người đang học</p>
+          <div class="cost"> 444.444đ</div>
         </div>
-        <div class="box2"> <img src="../images/js2.png">
-          <div class="info">
-            <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Đỗ Nam Anh</p>
-            <p> 3785 người đang học</p>
-            <div class="cost"> 785.787đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
-              <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
-              <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
-            </ul>
-          </div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
+            <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
+            <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
+          </ul>
         </div>
-        <div class="box3"> <img src="../images/js3.jpg">
-          <div class="info">
-            <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Nguyễn Thị Bí</p>
-            <p> 7358 người đang học</p>
-            <div class="cost"> 395895đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
-              <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
-              <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
-            </ul>
-          </div>
+      </div>
+      <div class="box2"> <img src="../images/js2.png">
+        <div class="info">
+          <h3>Khóa học Javascrpit dành cho người mới</h3>
+          <p> Đỗ Nam Anh</p>
+          <p> 3785 người đang học</p>
+          <div class="cost"> 785.787đ</div>
         </div>
-        <div class="box4"> <img src="../images/js4.jpg">
-          <div class="info">
-            <h3>Khóa học Javascrpit dành cho người mới</h3>
-            <p> Phạm Văn Bầu</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
-              <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
-              <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
-            </ul>
-          </div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
+            <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
+            <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
+          </ul>
+        </div>
+      </div>
+      <div class="box3"> <img src="../images/js3.jpg">
+        <div class="info">
+          <h3>Khóa học Javascrpit dành cho người mới</h3>
+          <p> Nguyễn Thị Bí</p>
+          <p> 7358 người đang học</p>
+          <div class="cost"> 395895đ</div>
+        </div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
+            <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
+            <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
+          </ul>
+        </div>
+      </div>
+      <div class="box4"> <img src="../images/js4.jpg">
+        <div class="info">
+          <h3>Khóa học Javascrpit dành cho người mới</h3>
+          <p> Phạm Văn Bầu</p>
+          <p> 844 người đang học</p>
+          <div class="cost"> 444.444đ</div>
+        </div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Trở thành nhà phát triển JavaScript tiên tiến, tự tin và hiện đại ngay từ đầu</li>
+            <li>Xây dựng dự án thực tế tuyệt đẹp cho dimages mục đầu tư của bạn (không phải là các ứng dụng đồ chơi nhàm chán)</li>
+            <li>Sẵn sàng công việc bằng cách hiểu cách JavaScript thực sự hoạt động đằng sau hậu trường</li>
+          </ul>
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="courses-group">
+  <div id="jquery">
+    <h2 style=" color:#ff2f39a6; font-size:xx-large;"> Các lớp học Jquery</h2>
+    <div class="box"> <img src="../images/jquery.png">
+      <div class="info">
+        <h3>Khóa học jQuery dành cho người mới</h3>
+        <p> Nguyễn Thị Xoài</p>
+        <p> 9852 người đang học</p>
+        <div class="cost"> 3958825đ</div>
+      </div>
+      <div class="detail">
+        <h3>Bạn sẽ học được </h3>
+        <ul>
+          <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
+          <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
+          <li> Tạo các trang web động mà người dùng thích thú</li>
+        </ul>
+      </div>
     </div>
-    <div class="courses-group">
-      <div id="jquery">
-        <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học Jquery</h2>
-        <div class="box"> <img src="../images/jquery.png">
-          <div class="info">
-            <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Thị Xoài</p>
-            <p> 9852 người đang học</p>
-            <div class="cost"> 3958825đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
-              <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
-              <li> Tạo các trang web động mà người dùng thích thú</li>
-            </ul>
-          </div>
-        </div>
-        <div class="box2"> <img src="../images/jquery2.png">
-          <div class="info">
-            <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Văn Cam</p>
-            <p> 8358 người đang học</p>
-            <div class="cost"> 348853đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
-              <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
-              <li> Tạo các trang web động mà người dùng thích thú</li>
-            </ul>
-          </div>
-        </div>
-        <div class="box3"> <img src="../images/jquery3.jpg">
-          <div class="info">
-            <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Nguyễn Văn Ổi</p>
-            <p> 8784 người đang học</p>
-            <div class="cost"> 758375đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
-              <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
-              <li> Tạo các trang web động mà người dùng thích thú</li>
-            </ul>
-          </div>
-        </div>
-        <div class="box4"> <img src="../images/jquery4.jpg">
-          <div class="info">
-            <h3>Khóa học jQuery dành cho người mới</h3>
-            <p> Huỳnh Thị Mít</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
-              <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
-              <li> Tạo các trang web động mà người dùng thích thú</li>
-            </ul>
-          </div>
+    <div class="box2"> <img src="../images/jquery2.png">
+      <div class="info">
+        <h3>Khóa học jQuery dành cho người mới</h3>
+        <p> Nguyễn Văn Cam</p>
+        <p> 8358 người đang học</p>
+        <div class="cost"> 348853đ</div>
+      </div>
+      <div class="detail">
+        <h3>Bạn sẽ học được </h3>
+        <ul>
+          <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
+          <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
+          <li> Tạo các trang web động mà người dùng thích thú</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box3"> <img src="../images/jquery3.jpg">
+      <div class="info">
+        <h3>Khóa học jQuery dành cho người mới</h3>
+        <p> Nguyễn Văn Ổi</p>
+        <p> 8784 người đang học</p>
+        <div class="cost"> 758375đ</div>
+      </div>
+      <div class="detail">
+        <h3>Bạn sẽ học được </h3>
+        <ul>
+          <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
+          <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
+          <li> Tạo các trang web động mà người dùng thích thú</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box4"> <img src="../images/jquery4.jpg">
+      <div class="info">
+        <h3>Khóa học jQuery dành cho người mới</h3>
+        <p> Huỳnh Thị Mít</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+      </div>
+      <div class="detail">
+        <h3>Bạn sẽ học được </h3>
+        <ul>
+          <li>Thêm hiệu ứng và hình ảnh động đẹp mắt vào trang web của bạn</li>
+          <li>Sử dụng AJAX để thêm nội dung động vào trang từ các API như Flickr và TheMovieDB</li>
+          <li> Tạo các trang web động mà người dùng thích thú</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="courses-group">
+  <div id="PHP">
+    <h2 style=" color:#ff2f39a6; font-size:xx-large;"> Các lớp học PHP</h2>
+    <div class="box"> <img src="../images/php.png">
+      <div class="info">
+        <h3>Khóa học PHP dành cho người mới</h3>
+        <p> Vũ Văn Sầu Riêng</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+      </div>
+      <div class="detail">
+        <h3>Bạn sẽ học được </h3>
+        <ul>
+          <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
+          <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
+          <li>Bạn sẽ học MySQL</li>
+        </ul>
+      </div>
+    </div>
+    <div class="box2"> <img src="../images/php2.jpg">
+      <div class="info">
+        <h3>Khóa học PHP dành cho người mới</h3>
+        <p> Vũ Văn Sầu Riêng</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ </div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
+            <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
+            <li>Bạn sẽ học MySQL</li>
+          </ul>
         </div>
       </div>
     </div>
+    <div class="box3"> <img src="../images/php3.jpg">
+      <div class="info">
+        <h3>Khóa học PHP dành cho người mới</h3>
+        <p> Nguyễn Huy Khoa</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
+            <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
+            <li>Bạn sẽ học MySQL</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="courses-group">
-      <div id="PHP">
-       <h2 style=" color:#ff2f39a6; font-family:'Palatino Linotype', 'Book Antiqua', Palatino, serif; font-size:xx-large;"> Các lớp học PHP</h2>
-        <div class="box"> <img src="../images/php.png">
-          <div class="info">
-            <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Vũ Văn Sầu Riêng</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
-          </div>
-          <div class="detail">
-            <h3>Bạn sẽ học được </h3>
-            <ul>
-              <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
-              <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
-              <li>Bạn sẽ học MySQL</li>
-            </ul>
-          </div>
-        </div>
-        <div class="box2"> <img src="../images/php2.jpg">
-          <div class="info">
-            <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Vũ Văn Sầu Riêng</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ </div>
-            <div class="detail">
-              <h3>Bạn sẽ học được </h3>
-              <ul>
-                <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
-                <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
-                <li>Bạn sẽ học MySQL</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="box3"> <img src="../images/php3.jpg">
-          <div class="info">
-            <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Nguyễn Huy Khoa</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
-            <div class="detail">
-              <h3>Bạn sẽ học được </h3>
-              <ul>
-                <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
-                <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
-                <li>Bạn sẽ học MySQL</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="box4"> <img src="../images/php4.jpg">
-          <div class="info">
-            <h3>Khóa học PHP dành cho người mới</h3>
-            <p> Vũ Văn Sầu Riêng</p>
-            <p> 844 người đang học</p>
-            <div class="cost"> 444.444đ</div>
-            <div class="detail">
-              <h3>Bạn sẽ học được </h3>
-              <ul>
-                <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
-                <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
-                <li>Bạn sẽ học MySQL</li>
-              </ul>
-            </div>
-          </div>
+    <div class="box4"> <img src="../images/php4.jpg">
+      <div class="info">
+        <h3>Khóa học PHP dành cho người mới</h3>
+        <p> Vũ Văn Sầu Riêng</p>
+        <p> 844 người đang học</p>
+        <div class="cost"> 444.444đ</div>
+        <div class="detail">
+          <h3>Bạn sẽ học được </h3>
+          <ul>
+            <li>Bạn sẽ học cách tạo Hệ thống quản lý nội dung (CMS) như WordPress, Drupal hoặc Joomla</li>
+            <li>Bạn sẽ học cách sử dụng Cơ sở dữ liệu</li>
+            <li>Bạn sẽ học MySQL</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -391,7 +387,7 @@
     </div>
   </div>
   <div class="footer2">
-    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <h3 class="h3white">KHOÁ HỌC</h3>
     <ul class="list">
       <li><a class="link" href="../courses-type/course-type.html">HTML</a></li>
       <hr class="line">
