--- a/Root/IE104.CK/learn/Bai1.html
+++ b/Root/IE104.CK/learn/Bai1.html
@@ -97,7 +97,7 @@
     </div>
   </div>
   <div class="footer2">
-    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <h3 class="h3white">KHOÁ HỌC</h3>
     <ul class="list">
       <li><a class="link" href="../courses-type/course-type.html">HTML</a></li>
       <hr class="line">
