--- a/Root/IE104.CK/lecturer-detail/lecturer-detail.html
+++ b/Root/IE104.CK/lecturer-detail/lecturer-detail.html
@@ -19,7 +19,6 @@
     <ul id="main-menu">
       <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
-      <li><a class="main_nav" href="">Thông báo</a></li>
       <li><a class="main_nav" id="log-in" style="color:black" text href="../log-in/index.html">Đăng nhập</a></li>
       <li><a class="main_nav" id="sign-up" href="../sign-up/index.html">Đăng ký</a></li>
     </ul>
@@ -119,7 +118,7 @@
         </ul>
       </div>
     </div>
-    <div class="box"> <img src="../images/html2.jfif">
+    <div class="box"> <img src="../images/html2.jpg">
       <div class="info">
         <h3>HTML cấp tốc</h3>
         <p> Nguyễn Huy Khoa</p>
@@ -213,7 +212,7 @@
     </div>
   </div>
   <div class="footer2">
-    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <h3 class="h3white">KHOÁ HỌC</h3>
     <ul class="list">
       <li><a class="link" href="../courses-type/course-type.html">HTML</a></li>
       <hr class="line">
