--- a/Root/IE104.CK/course-detail/course-detail.html
+++ b/Root/IE104.CK/course-detail/course-detail.html
@@ -19,7 +19,6 @@
     <ul id="main-menu">
       <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
-      <li><a class="main_nav" href="">Thông báo</a></li>
       <li><a class="main_nav" id="log-in" style="color:black" text href="../log-in/index.html">Đăng nhập</a></li>
       <li><a class="main_nav" id="sign-up" href="../sign-up/index.html">Đăng ký</a></li>
     </ul>
@@ -30,7 +29,7 @@
 <div id="title">
   <div id="title_detail">
     <div id="nav">
-      <p><a class="nav" href="../courses-type/course-type.html">HTML</a> &#62 <a class="nav" href="">Khoá học HTML dành cho người mới</a></p>
+      <p><a class="nav" href="../courses/index.html">Khoá học</a> &#62 <a class="nav" href="../courses-type/course-type.html">HTML</a> &#62 <a class="nav" href="">Khoá học HTML dành cho người mới</a></p>
     </div>
     <h2 id="course_name">Khoá học HTML dành cho người mới</h2>
     <h3 id="subtitle">Cung cấp kiến thức nền tảng về HTML</h3>
@@ -65,7 +64,7 @@
     </div>
   </div>
   <div class="footer2">
-    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <h3 class="h3white">KHOÁ HỌC</h3>
     <ul class="list">
       <li><a class="link" href="../courses-type/course-type.html">HTML</a></li>
       <hr class="line">
