--- a/Root/IE104.CK/courses-type/course-type.html
+++ b/Root/IE104.CK/courses-type/course-type.html
@@ -20,7 +20,6 @@
     <ul id="main-menu">
       <li><a class="main_nav" href="../index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="../courses/index.html">Khóa học</a></li>
-      <li><a class="main_nav" href="">Thông báo</a></li>
       <li><a class="main_nav" id="log-in" style="color:black" text href="../log-in/index.html">Đăng nhập</a></li>
       <li><a class="main_nav" id="sign-up" href="../sign-up/index.html">Đăng ký</a></li>
     </ul>
@@ -28,6 +27,9 @@
 </header>
 	
 <!-- InstanceBeginEditable name="EditRegion3" -->
+	<div id="nav">
+      <p><a class="nav" href="../courses/index.html">Khoá học</a> &#62 <a class="nav" href="">HTML</a></p>
+    </div>
 <h2 id="title">Các khoá học HTML</h2>
 <div id="main_page">
   <div id="html1" class="box"> <img src="../images/html.png">
@@ -227,7 +229,7 @@
     </div>
   </div>
   <div class="footer2">
-    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <h3 class="h3white">KHOÁ HỌC</h3>
     <ul class="list">
       <li><a class="link" href="course-type.html">HTML</a></li>
       <hr class="line">
