--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html>
-<!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/Home_HeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -20,12 +19,12 @@
     <ul id="main-menu">
       <li><a class="main_nav" href="index.html">Trang chủ</a></li>
       <li><a class="main_nav" href="courses/index.html">Khóa học</a></li>
-      <li><a class="main_nav" href="">Thông báo</a></li>
       <li><a class="main_nav" id="log-in" style="color:black" text href="log-in/index.html">Đăng nhập</a></li>
       <li><a class="main_nav" id="sign-up" href="sign-up/index.html">Đăng ký</a></li>
     </ul>
   </nav>
 </header>
+	
 <!-- InstanceBeginEditable name="EditRegion3" -->
 <div id="mainpage">
   <div id="detail">
@@ -104,6 +103,7 @@
   </div>
 </div>
 <!-- InstanceEndEditable -->
+	
 <footer class="footer">
   <div class="footer1"> <img src="images/logo.png">
     <div class="content1">
@@ -114,7 +114,7 @@
     </div>
   </div>
   <div class="footer2">
-    <h3 class="h3white">CÁC KHOÁ HỌC</h3>
+    <h3 class="h3white">KHOÁ HỌC</h3>
     <ul class="list">
       <li><a class="link" href="courses-type/course-type.html">HTML</a></li>
       <hr class="line">
@@ -156,5 +156,4 @@
 <!-- InstanceBeginEditable name="script" -->
 <script src="js/script.js"></script>
 <!-- InstanceEndEditable -->
-<!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
