Update Image in Course_Type

--- a/Root/IE104.CK/index.html
+++ b/Root/IE104.CK/index.html
@@ -99,7 +99,7 @@
         </div>
       </div>
     </div>
-    <div style=" margin: 20px;;text-align:right;border:1px solid #000;width: 200px; float:left ;background-color:#36C; border-radius:20px; padding: 10px; display:inline-block"> <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a> </div>
+    <div style=" margin: 20px;;text-align:right;border:1px solid #000;width: 200px; background-color:#36C; border-radius:20px; padding: 10px; display:inline-block"> <a href="khoahoc/index.html">Thêm nhiều hơn &#62&#62&#62 </a> </div>
   </div>
 </div>
 <!-- InstanceEndEditable -->
