--- a/Root/IE104.CK/lecturer-detail/lecturer-detail.html
+++ b/Root/IE104.CK/lecturer-detail/lecturer-detail.html
@@ -121,8 +121,8 @@
     <div class="box"> <img src="../images/html2.jpg">
       <div class="info">
         <h3>HTML cấp tốc</h3>
-        <p> Nguyễn Huy Khoa</p>
-        <p> 8448 người đang học</p>
+        <p>Phạm Thùy Dung</p>
+        <p>8448 người đang học</p>
         <div class="cost"> 567.890đ</div>
       </div>
       <div class=" detail">
@@ -134,10 +134,10 @@
         </ul>
       </div>
     </div>
-    <div class="box"> <img src="../images/html.png">
+    <div class="box"> <img src="../images/html7.jpg">
       <div class="info">
-        <h3>HTML cấp tốc</h3>
-        <p> Nguyễn Huy Khoa</p>
+        <h3>HTML nâng cao</h3>
+        <p>Phạm Thùy Dung</p>
         <p> 844 người đang học</p>
         <div class="cost"> 444.444đ</div>
       </div>
@@ -150,10 +150,10 @@
         </ul>
       </div>
     </div>
-    <div class="box"> <img src="../images/html.png">
+    <div class="box"> <img src="../images/css3.jpg">
       <div class="info">
-        <h3>Khóa học HTML dành cho người mới</h3>
-        <p> Nguyễn Huy Khoa</p>
+        <h3>CSS toàn tập</h3>
+        <p>Phạm Thùy Dung</p>
         <p> 844 người đang học</p>
         <div class="cost"> 444.444đ</div>
       </div>
@@ -166,10 +166,10 @@
         </ul>
       </div>
     </div>
-    <div class="box"> <img src="../images/html.png">
+    <div class="box"> <img src="../images/css4.jpg">
       <div class="info">
-        <h3>HTML cấp tốc</h3>
-        <p> Nguyễn Huy Khoa</p>
+        <h3>CSS nâng cao</h3>
+        <p>Phạm Thùy Dung</p>
         <p> 844 người đang học</p>
         <div class="cost"> 444.444đ</div>
       </div>
@@ -182,10 +182,10 @@
         </ul>
       </div>
     </div>
-    <div class="box"> <img src="../images/html.png">
+    <div class="box"> <img src="../images/php2.jpg">
       <div class="info">
-        <h3>Khóa học HTML dành cho người mới</h3>
-        <p> Nguyễn Huy Khoa</p>
+        <h3>PHP căn bản</h3>
+        <p>Phạm Thùy Dung</p>
         <p> 844 người đang học</p>
         <div class="cost"> 444.444đ</div>
       </div>
