--- a/Root/IE104.CK/courses-type/course-type.html
+++ b/Root/IE104.CK/courses-type/course-type.html
@@ -27,11 +27,15 @@
 </header>
 	
 <!-- InstanceBeginEditable name="EditRegion3" -->
-	<div id="nav">
-      <p><a class="nav" href="../courses/index.html">Khoá học</a> &#62 <a class="nav" href="">HTML</a></p>
-    </div>
-<h2 id="title">Các khoá học HTML</h2>
-<div id="main_page">
+<div id="detail">
+  <div id="intro">
+      <h2 id="title">HTML - HyperText Markup Language</h2>
+      <p>HTML là một ngôn ngữ đánh dấu được thiết kế ra để tạo nên các trang web trên World Wide Web. Nó có thể được trợ giúp bởi các công nghệ như CSS và các ngôn ngữ kịch bản giống như JavaScript.</p>
+  </div>
+  <div id="image"><img src="../images/html-t.jpg"></div>
+</div>
+<h2 class="title">Các khoá học hợp với bạn</h2>
+<div class="main_page">
   <div id="html1" class="box"> <img src="../images/html.png">
     <div class="info">
       <h3>Khóa học HTML dành cho người mới</h3>
@@ -63,7 +67,7 @@
         <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
       </ul>
     </div>
-  </div><div class="box"> <img src="../images/html.png">
+  </div><div class="box"> <img src="../images/html3.jpg">
     <div class="info">
       <h3>Khóa học HTML dành cho người mới</h3>
       <p> Nguyễn Huy Khoa</p>
@@ -78,97 +82,7 @@
         <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
       </ul>
     </div>
-  </div><div class="box"> <img src="../images/html.png">
-    <div class="info">
-      <h3>Khóa học HTML dành cho người mới</h3>
-      <p> Nguyễn Huy Khoa</p>
-      <p> 844 người đang học</p>
-      <div class="cost"> 444.444đ</div>
-    </div>
-    <div class=" detail">
-      <h3>Bạn có thể học được</h3>
-      <ul>
-        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-      </ul>
-    </div>
-  </div><div class="box"> <img src="../images/html.png">
-    <div class="info">
-      <h3>Khóa học HTML dành cho người mới</h3>
-      <p> Nguyễn Huy Khoa</p>
-      <p> 844 người đang học</p>
-      <div class="cost"> 444.444đ</div>
-    </div>
-    <div class=" detail">
-      <h3>Bạn có thể học được</h3>
-      <ul>
-        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-      </ul>
-    </div>
-  </div><div class="box"> <img src="../images/html.png">
-    <div class="info">
-      <h3>Khóa học HTML dành cho người mới</h3>
-      <p> Nguyễn Huy Khoa</p>
-      <p> 844 người đang học</p>
-      <div class="cost"> 444.444đ</div>
-    </div>
-    <div class=" detail">
-      <h3>Bạn có thể học được</h3>
-      <ul>
-        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-      </ul>
-    </div>
-  </div><div class="box"> <img src="../images/html.png">
-    <div class="info">
-      <h3>Khóa học HTML dành cho người mới</h3>
-      <p> Nguyễn Huy Khoa</p>
-      <p> 844 người đang học</p>
-      <div class="cost"> 444.444đ</div>
-    </div>
-    <div class=" detail">
-      <h3>Bạn có thể học được</h3>
-      <ul>
-        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-      </ul>
-    </div>
-  </div><div class="box"> <img src="../images/html.png">
-    <div class="info">
-      <h3>Khóa học HTML dành cho người mới</h3>
-      <p> Nguyễn Huy Khoa</p>
-      <p> 844 người đang học</p>
-      <div class="cost"> 444.444đ</div>
-    </div>
-    <div class=" detail">
-      <h3>Bạn có thể học được</h3>
-      <ul>
-        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-      </ul>
-    </div>
-  </div><div class="box"> <img src="../images/html.png">
-    <div class="info">
-      <h3>Khóa học HTML dành cho người mới</h3>
-      <p> Nguyễn Huy Khoa</p>
-      <p> 844 người đang học</p>
-      <div class="cost"> 444.444đ</div>
-    </div>
-    <div class=" detail">
-      <h3>Bạn có thể học được</h3>
-      <ul>
-        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
-        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
-        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
-      </ul>
-    </div>
-  </div><div class="box"> <img src="../images/html.png">
+  </div><div class="box"> <img src="../images/html4.jpg">
     <div class="info">
       <h3>Khóa học HTML dành cho người mới</h3>
       <p> Nguyễn Huy Khoa</p>
@@ -184,7 +98,55 @@
       </ul>
     </div>
   </div>
-  <div class="box"> <img src="../images/html.png">
+</div>
+  <h2 class="title">Các khoá học đăng ký nhiều</h2>
+  <div class="main_page">
+  <div class="box"> <img src="../images/html5.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html6.jpg">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html7.jpg">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html8.jpg">
     <div class="info">
       <h3>Khóa học HTML dành cho người mới</h3>
       <p> Nguyễn Huy Khoa</p>
@@ -200,7 +162,57 @@
       </ul>
     </div>
   </div>
-  <div class="box"> <img src="../images/html.png">
+</div>
+<h2 class="title">Các khoá học mới</h2>
+<div class="main_page">
+  <div class="box"> <img src="../images/html9.jpg">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div><div class="box"> <img src="../images/html10.png">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="box"> <img src="../images/html11.jpg">
+    <div class="info">
+      <h3>Khóa học HTML dành cho người mới</h3>
+      <p> Nguyễn Huy Khoa</p>
+      <p> 844 người đang học</p>
+      <div class="cost"> 444.444đ</div>
+    </div>
+    <div class=" detail">
+      <h3>Bạn có thể học được</h3>
+      <ul>
+        <li>Nhận các chủ đề được giới thiệu như Internet, Tên miền, Địa chỉ IP và các trình duyệt.</li>
+        <li> Cài đặt Visual Studio Code vào hệ thống.</li>
+        <li>Tìm hiểu Kiến thức cơ bản về HTML với các ví dụ.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="box"> <img src="../images/html12.png">
     <div class="info">
       <h3>Khóa học HTML dành cho người mới</h3>
       <p> Nguyễn Huy Khoa</p>
